--- a/src/example/remoteapp.html
+++ b/src/example/remoteapp.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>easyXSS</title>
+        <title>easyXDM</title>
     </head>
     <body>
     	<!-- Send some data to the other side using the proxy -->
