--- a/src/example/index.html
+++ b/src/example/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
     <head>
-        <title>easyXSS</title>
-        <script type="text/javascript" src="../easyXSS.debug.js">
+        <title>easyXDM</title>
+        <script type="text/javascript" src="../easyXDM.debug.js">
         </script>
         <script type="text/javascript">
             /**
              * Request the use of the JSON object
              */
-            easyXSS.DomHelper.requiresJSON("../json2.js");
+            easyXDM.DomHelper.requiresJSON("../json2.js");
         </script>
         <script type="text/javascript">
             /* Here we demo how to have two visible web applications communicate together.
@@ -24,7 +24,7 @@
                 /**
                  * When the window is finished loading start setting up the channel
                  */
-                proxy = new easyXSS.Channel(/** The configuration */{
+                proxy = new easyXDM.Channel(/** The configuration */{
                     /**
                      * Register the method that should handle incoming data
                      * @param {Object} data
@@ -61,7 +61,7 @@
         </script>
     </head>
     <body>
-        <!-- easyXSS.Debug.trace(msg) will output its messages to any element with the id "log" -->
+        <!-- easyXDM.Debug.trace(msg) will output its messages to any element with the id "log" -->
         <div id="log" style="height:100px;border:1px dotted black;overflow:auto">
         </div>
         <!-- Send som data to the other side --><input type="button" onclick="proxy.sendData({a:'b',c:'d',e:'f'});" value="send data to remote"/>
