--- a/src/example/methods.html
+++ b/src/example/methods.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
     <head>
-        <title>easyXSS</title>
-        <script type="text/javascript" src="../easyXSS.debug.js">
+        <title>easyXDM</title>
+        <script type="text/javascript" src="../easyXDM.debug.js">
         </script>
         <script type="text/javascript">
             /**
              * Request the use of the JSON object
              */
-            easyXSS.DomHelper.requiresJSON("../json2.js");
+            easyXDM.DomHelper.requiresJSON("../json2.js");
         </script>
         <script type="text/javascript">
             var remote;
@@ -16,7 +16,7 @@
                 /**
                  * When the window is finished loading start setting up the interface
                  */
-                remote = new easyXSS.Interface(/** The channel configuration */{
+                remote = new easyXDM.Interface(/** The channel configuration */{
                     /**
                      * Register the url to hash.html, this must be an absolute path
                      * or a path relative to the root.
@@ -81,7 +81,7 @@
         <script type="text/javascript">
             document.write("Domain: " + location.host);
         </script>
-        <!-- easyXSS.Debug.trace(msg) will output its messages to any element with the id "log" -->
+        <!-- easyXDM.Debug.trace(msg) will output its messages to any element with the id "log" -->
         <div id="log" style="height:100px;border:1px dotted black;overflow:auto">
         </div>
         <div id="embedded">
