--- a/src/example/remotemethods.html
+++ b/src/example/remotemethods.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
     <head>
-        <title>easyXSS</title>
-        <script type="text/javascript" src="../easyXSS.debug.js">
+        <title>easyXDM</title>
+        <script type="text/javascript" src="../easyXDM.debug.js">
         </script>
         <script type="text/javascript">
             /**
              * Request the use of the JSON object
              */
-            easyXSS.DomHelper.requiresJSON("../json2.js");
+            easyXDM.DomHelper.requiresJSON("../json2.js");
         </script>
         <script type="text/javascript">
             var channel, remote;
@@ -20,7 +20,7 @@
                 /**
                  * When the channel is ready we create the interface
                  */
-                remote = new easyXSS.Interface(/** The channel configuration*/{}, /** The configuration */ {
+                remote = new easyXDM.Interface(/** The channel configuration*/{}, /** The configuration */ {
                     remote: {
                         alertMessage: {
                             isVoid: true
@@ -55,7 +55,7 @@
         <script type="text/javascript">
             document.write("Domain: " + location.host);
         </script>
-        <!-- easyXSS.Debug.trace(msg) will output its messages to any element with the id "log" -->
+        <!-- easyXDM.Debug.trace(msg) will output its messages to any element with the id "log" -->
         <div id="log" style="height:100px;border:1px dotted black;overflow:auto">
         </div>
         <input type="button" onclick="remote.alertMessage('message from remote');" value="call alertMessage on local domain"/>
